// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color:  <color> <color> 1`] = `
".test::-webkit-scrollbar-thumb {
  background-color: rebeccapurple;
}
.test::-webkit-scrollbar-track {
  background-color: green;
}
.test::-webkit-scrollbar-corner {
  background-color: green;
}
.test {
  scrollbar-color: rebeccapurple green;
}"
`;

exports[`color:  erroneous keyword 1`] = `
".test {
  scrollbar-color: blue;
}"
`;

exports[`color:  keyword 1`] = `
".test::-webkit-scrollbar-thumb {
  background-color: initial;
}
.test::-webkit-scrollbar-track {
  background-color: initial;
}
.test::-webkit-scrollbar-corner {
  background-color: initial;
}
.test {
  scrollbar-color: dark;
}"
`;
